hoan thanh 7 cau hoi

--- a/Day9/JS_Day9_HW/index.html
+++ b/Day9/JS_Day9_HW/index.html
@@ -4,20 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM Basic</title>
   </head>
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <style></style>
 
   <body>
-    <h1>Bài tập buổi 1 nâng cao DOM</h1>
-  </body>
+    <!-- Given head -->
+    <h1 class="heading">Hello DOM</h1>
+    <img class="avatar" src="" alt="" />
+    <link class="profile" rel="stylesheet" href="" />
 
-  <script></script>
+    <!-- Given list of hobbies -->
+    <ul class="favorite">
+      <li>A</li>
+      <li>Play game</li>
+      <li>Listen music</li>
+      <li>D</li>
+    </ul>
+
+    <div class="clock">Bây giờ là</div>
+
+    <!-- This is a given paragraph -->
+    <p class="bio">
+      Thầy giáo ba đẹp trai Thầy giáo Ba đẹp trai Thầy giáo ba đẹp trai Thầy
+      giáo Ba đẹp trai Thầy giáo ba đẹp trai Thầy giáo Ba đẹp trai Thầy giáo Ba
+      đẹp trai Thầy giáo ba đẹp trai Thầy giáo ba đẹp trai Thầy giáo ba đẹp trai
+      Thầy giáo ba đẹp trai Thầy giáo ba đẹp trai
+    </p>
+
+    <!-- Number of words -->
+    <p class="num-of-words"></p>
+
+    <!-- This is a given table -->
+    <table class="list-students">
+      <tbody>
+        <tr>
+          <td>Giang Hồng Sơn</td>
+        </tr>
+        <tr>
+          <td>Bùi Lan Nhi</td>
+        </tr>
+        <tr>
+          <td>Hoàng Thị Ngọc Linh</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <script>
+      const heading = "Thầy giáo Ba đẹp trai";
+      const avatar =
+        "https://images.emojiterra.com/google/noto-emoji/v2.034/512px/1f422.png";
+      const profile = "https://twitter.com/banx9x";
+
+      // 1. Thay đổi nội dung của thẻ title thành giá trị của heading
+      document.title = heading;
+
+      // 2. Thay đổi nội dung của thẻ h1 thành giá trị của heading
+      document.querySelector("h1").innerHTML = heading;
+
+      // 3. Thay đổi src của thẻ img thành giá trị của avatar
+      document.querySelector("img").src = avatar;
+
+      // 4. Thay đổi src của thẻ link thành giá trị của profile
+      document.querySelector("link").href = profile;
+
+      // 5. Thay đổi nội dung của thẻ li đầu tiên trong thẻ ul thành Code application
+      document.querySelector("li").innerHTML = "Code Application";
+
+      // 6. Thay đổi nội dung của thẻ li cuối cùng trong thẻ ul thành Sleep
+      let liTags = document.querySelectorAll("li");
+      liTags[liTags.length - 1].innerHTML = "Sleep";
+
+      // 7. Thay đổi nội dung của div thành thời gian hiện tại theo mẫu Bây giờ là giờ:phút:giây,
+      // ngày ngày/tháng/năm
+      let today = new Date();
+      let time = `${today.getHours()}:${today.getMinutes()}:${today.getSeconds()}`;
+      let date = `${today.getDate()}/${today.getMonth()}/${today.getFullYear()}`;
+
+      let timeDate = time + " " + date;
+      document.querySelector(".clock").innerHTML = timeDate;
+
+      // 8. Đếm số từ trong đoạn văn p.bio xem có bao nhiêu từ Ba (không phân biệt chữ hoa chữ
+      // thường) và thêm nội dung vào thẻ p.num-of-words bên dưới thông báo kết quả dạng Ở đoạn
+      // văn trên có xx từ 'Ba'
+
+      // 9. Thêm một hàng mới vào table (tham khảo API của HTMLTableElement)
+
+      // 10. Thêm một cột (ô) mới vào hàng vừa tạo có nội dung Thầy giáo Ba siêu cấp đẹp trai
+    </script>
+  </body>
 </html>
