--- a/Day9/JS_Day9_HW/index.html
+++ b/Day9/JS_Day9_HW/index.html
@@ -88,12 +88,26 @@
       // 8. Đếm số từ trong đoạn văn p.bio xem có bao nhiêu từ Ba (không phân biệt chữ hoa chữ
       // thường) và thêm nội dung vào thẻ p.num-of-words bên dưới thông báo kết quả dạng Ở đoạn
       // văn trên có xx từ 'Ba'
-      let paragraph = document.querySelector(".bio").innerHTML;
-      let arr = paragraph.toLowerCase().split("ba");
+      let words = document
+        .querySelector(".bio")
+        .textContent.toLowerCase()
+        .split(" ");
 
-      console.log(arr);
+      total = 0;
+      for (let word of words) {
+        if (word === "ba") {
+          total++;
+        }
+      }
+
+      document.querySelector(
+        ".num-of-words"
+      ).textContent = `Đoạn văn trên có ${total} từ ba`;
 
       // 9. Thêm một hàng mới vào table (tham khảo API của HTMLTableElement)
+      
+
+
 
       // 10. Thêm một cột (ô) mới vào hàng vừa tạo có nội dung Thầy giáo Ba siêu cấp đẹp trai
     </script>
