--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -65,12 +65,12 @@
                 </li>
                 <li>
                   <a href="#">
-                    <i class="fa-light fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="fa-light fa-cart-shopping"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
                   </a>
                 </li>
               </ul>
@@ -99,7 +99,105 @@
           </div>
         </div>
       </div>
+
+      <!-- Banner main -->
+      <div class="banner-main">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+              <div class="wrap-txt-main">
+                <h2 class="headline">MacBook Air M2</h2>
+                <img
+                  src="/asset/images/logo_hero_macbookair__edl9uovq56wm_mediumtall_2x.png"
+                  alt="log-dark"
+                />
+              <div class="link-main">
+                <a href="">Learn more</a>
+                <a href="#">Buy</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <!-- iPhone 13 -->
+    <div class="iphone13-product product">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="wrap-txt-main">
+              <h2 class="title-main">iPhone <span>13</span></h2>
+              <h3>Your new superpower</h3>
+              <div class="link-main">
+                <a href="">Learn more</a>
+                <a href="">Buy</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Super-product -->
+    <div class="super-product product">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="wrap-txt-main">
+              <h2 class="title-super">Get <span>supercharged</span> for college</h2>
+              <h3>Save on iPad. Plus get a gift card up to $150.</h3>
+              <div class="link-super">
+                <a href="">Shop now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- impro-product -->
+
+    <div class="impro-product">
+      <div class="container-fluid">
+        <div class="row">
+    
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="col-left">
+            <div class="wrap-txt-main">
+              <h2 class="title-left">iPhone 13 Pro</h2>
+              <h3>Oh. So. Pro</h3>
+              <div class="link-left">
+                <a href="">Learn more</a>
+                <a href="">Buy</a>
+            </div>
+
+          </div>
+          </div>
+          </div>
+
+
+
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <div class="col-right">
+            <div class="wrap-txt-main">
+              <h2 class="title-left">MacBook Pro 13"</h2>
+              <img src="" alt="">
+              <div class="link-left">
+                <a href="">Learn more</a>
+                <a href="">Buy</a>
+            </div>
+
+          </div>
+            </div>
+          </div>
+
+
+        </div>  
+      </div>
+    </div>
+
 
     <!-- Boostrap-core-js -->
     <script src="/lib/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
