--- a/test_js/signup.html
+++ b/test_js/signup.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="login-password-container">
-      <h1 class="form-title">Đăng Nhập</h1>
+      <h1 class="form-title">Đăng Ký</h1>
       <form action="action_page.php" method="post">
         <div class="container">
           <label for="uname"><b>Tên đăng nhập</b></label>
@@ -31,7 +31,7 @@
           <button type="submit">Đăng nhập</button>
         </div>
         <span class="psw"
-          >Chưa có tài khoản?<a href="signup.html"> Đăng ký</a></span
+          >Đã có tài khoản?<a href="index.html"> Đăng nhập ngay</a></span
         >
       </form>
     </div>
