--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -78,39 +78,40 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="header-main">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="wrap-header-main">
-                <a href="">
-                  <img
-                    src="/asset/images/unicef_logo_dark__ejvlglygb3ee_large.png"
-                    alt=""
-                  />
-                </a>
+    <div class="header-main">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="wrap-header-main">
+              <a href="">
+                <img
+                  src="/asset/images/unicef_logo_dark__ejvlglygb3ee_large.png"
+                  alt=""
+                />
+              </a>
 
-                <a class="txt-donate" href="#"
-                  >Donate to support families affected by the war in Ukraine</a
-                >
-              </div>
+              <a class="txt-donate" href="#"
+                >Donate to support families affected by the war in Ukraine</a
+              >
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- Banner main -->
-      <div class="banner-main">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-              <div class="wrap-txt-main">
-                <h2 class="headline">MacBook Air M2</h2>
-                <img
-                  src="/asset/images/logo_hero_macbookair__edl9uovq56wm_mediumtall_2x.png"
-                  alt="log-dark"
-                />
+    <!-- Banner main -->
+    <div class="banner-main">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="wrap-txt-main">
+              <h2 class="headline">MacBook Air M2</h2>
+              <img
+                src="/asset/images/logo_hero_macbookair__edl9uovq56wm_mediumtall_2x.png"
+                alt="log-dark"
+              />
               <div class="link-main">
                 <a href="">Learn more</a>
                 <a href="#">Buy</a>
@@ -139,14 +140,15 @@
       </div>
     </div>
 
-
     <!-- Super-product -->
     <div class="super-product product">
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
             <div class="wrap-txt-main">
-              <h2 class="title-super">Get <span>supercharged</span> for college</h2>
+              <h2 class="title-super">
+                Get <span>supercharged</span> for college
+              </h2>
               <h3>Save on iPad. Plus get a gift card up to $150.</h3>
               <div class="link-super">
                 <a href="">Shop now</a>
@@ -157,47 +159,38 @@
       </div>
     </div>
 
-<!-- impro-product -->
-
-    <div class="impro-product">
+    <!-- impro-product -->
+    <div class="impro-product product">
       <div class="container-fluid">
         <div class="row">
-    
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
             <div class="col-left">
-            <div class="wrap-txt-main">
-              <h2 class="title-left">iPhone 13 Pro</h2>
-              <h3>Oh. So. Pro</h3>
-              <div class="link-left">
-                <a href="">Learn more</a>
-                <a href="">Buy</a>
+              <div class="wrap-txt-main">
+                <h2 class="title-left">iPhone 13 Pro</h2>
+                <h3>Oh. So. Pro</h3>
+                <div class="link-left">
+                  <a href="">Learn more</a>
+                  <a href="">Buy</a>
+                </div>
+              </div>
             </div>
-
           </div>
-          </div>
-          </div>
-
-
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-            <div class="col-right">
-            <div class="wrap-txt-main">
-              <h2 class="title-left">MacBook Pro 13"</h2>
-              <img src="" alt="">
-              <div class="link-left">
-                <a href="">Learn more</a>
-                <a href="">Buy</a>
+            <div class="col-right product">
+              <div class="wrap-txt-main">
+                <h2 class="title-left">MacBook Pro 13"</h2>
+                <img src="" alt="" />
+                <div class="link-left">
+                  <a href="">Learn more</a>
+                  <a href="">Buy</a>
+                </div>
+              </div>
             </div>
-
           </div>
-            </div>
-          </div>
-
-
-        </div>  
+        </div>
       </div>
     </div>
-
 
     <!-- Boostrap-core-js -->
     <script src="/lib/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
