--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -15,6 +15,15 @@
 
     <!-- Font-awesome -->
     <link rel="stylesheet" href="/lib/fontawesome-free-6.1.1-web/css/all.css" />
+
+    <link
+      rel="stylesheet"
+      href="/lib/owl-carousel/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/lib/owl-carousel/assets/owl.theme.default.min.css"
+    />
   </head>
   <body>
     <!-- Header-main -->
@@ -192,7 +201,40 @@
       </div>
     </div>
 
+    <!-- slider product -->
+
+    <div class="slider-product">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="owl-carousel owl-theme">
+              <div class="item"><h4>1</h4></div>
+              <div class="item"><h4>2</h4></div>
+              <div class="item"><h4>3</h4></div>
+              <div class="item"><h4>4</h4></div>
+              <div class="item"><h4>5</h4></div>
+              <div class="item"><h4>6</h4></div>
+              <div class="item"><h4>7</h4></div>
+              <div class="item"><h4>8</h4></div>
+              <div class="item"><h4>9</h4></div>
+              <div class="item"><h4>10</h4></div>
+              <div class="item"><h4>11</h4></div>
+              <div class="item"><h4>12</h4></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Boostrap-core-js -->
     <script src="/lib/bootstrap-5.2.0-dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Owl-core-js -->
+    <script src="/lib/owl-carousel/owl.carousel.min.js"></script>
+    <!-- jquery -->
+    <script src="jquery.min.js"></script>
+    <!-- owl-custom-js -->
+    <script src="/asset/js/custom-owl.js"></script>
+
+    
   </body>
 </html>
